--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,9 +30,19 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Build Image
+      run: docker build -t mlb-gateway:latest ./
+
+    - name: Login to registry
+      run: docker login --username=${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_REPOSITORY }} --password ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Push Image
+      run: docker push mlb-gateway:latest
+
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
   pull-docker:
       needs: [build]
       name: Pull Docker
@@ -46,9 +56,9 @@ jobs:
             password: ${{ secrets.HOST_PASSWORD }}
             port: ${{ secrets.HOST_PORT }}
             script: |
-              docker stop $(docker ps --filter ancestor=${{ secrets.DOCKER_REPOSITORY }} -q)
-              docker rm -f $(docker ps -a --filter ancestor=${{ secrets.DOCKER_REPOSITORY }}:latest -q)
-              docker rmi -f $(docker images ${{ secrets.DOCKER_REPOSITORY }}:latest -q)
-              docker login --username=${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ secrets.DOCKER_REPOSITORY }}
-              docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
-              docker run -d -p 8000:8080 ${{ secrets.DOCKER_REPOSITORY }}:latest
+              docker stop $(docker ps --filter ancestor=mlb-gateway -q)
+              docker rm -f $(docker ps -a --filter ancestor=mlb-gateway:latest -q)
+              docker rmi -f $(docker images mlb-gateway:latest -q)
+              docker login --username=${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_REPOSITORY }} --password ${{ secrets.DOCKER_PASSWORD }}
+              docker pull mlb-gateway:latest
+              docker run -d -p 8000:8080 mlb-gateway:latest
