--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,16 @@ jobs:
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+    - name: Build Image
+      run: docker build -t ${{ secrets.DOCKER_REPOSITORY }}:latest ./
+
+    - name: Login to registry
+      run: docker login --username=${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_REPOSITORY }} --password ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Push Image
+      run: docker push mlb-gateway:latest
+
   pull-docker:
       needs: [build]
       name: Pull Docker
