--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,4 +61,4 @@ jobs:
               docker rmi -f $(docker images ${{ secrets.DOCKER_REPOSITORY }}:latest -q)
               docker login --username=${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ secrets.DOCKER_REPOSITORY }}
               docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
-              docker run -d -p 8000:8080 ${{ secrets.DOCKER_REPOSITORY }}:latest
+              docker run -d -p 8000:8080 -e NACOS_SERVER=${{secrets.NACOS_SERVER}} ${{ secrets.DOCKER_REPOSITORY }}:latest
