--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,14 +34,20 @@ jobs:
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
-    - name: Build Image
-      run: docker build -t ${{ secrets.DOCKER_REPOSITORY }}:latest ./
+    - name: Login to Docker Aliyun
+        uses: docker/login-action@v2
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Login to registry
-      run: docker login --username=${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_REPOSITORY }} --password ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Push Image
-      run: docker push ${{ secrets.DOCKER_REPOSITORY }}:latest
+    - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
 
   pull-docker:
       needs: [build]
