--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: ${NACOS_SERVER}:8848
+        server-addr: ${NACOS_SERVER}
       config:
-        server-addr: ${NACOS_SERVER}:8848
+        server-addr: ${NACOS_SERVER}
         extension-configs:
           - data-id: gateway-dev.yaml
             refresh: true
