--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,19 @@
 
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <spring.cloud.version>2021.0.4</spring.cloud.version>
         <spring.cloud.alibaba-version>2021.1</spring.cloud.alibaba-version>
         <mlb-common.version>0.0.1-SNAPSHOT</mlb-common.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.github.mlb</groupId>
+            <artifactId>mlb-common</artifactId>
+            <version>0.0.1.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -52,7 +59,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
